--- a/mybatis-spring/src/main/webapp/WEB-INF/web.xml
+++ b/mybatis-spring/src/main/webapp/WEB-INF/web.xml
@@ -58,7 +58,7 @@
   <!-- Map all requests to the DispatcherServlet for handling -->
   <servlet-mapping>
     <servlet-name>spring</servlet-name>
-    <url-pattern>/</url-pattern>
+    <url-pattern>/*</url-pattern>
   </servlet-mapping>
 
   <!--<filter>
