--- a/mybatis-generator/src/main/resources/dbconfig.properties
+++ b/mybatis-generator/src/main/resources/dbconfig.properties
@@ -1,4 +1,4 @@
-jdbc.driver = com.mysql.cj.jdbc.Driver
+jdbc.driver = com.mysql.jdbc.Driver
 jdbc.url = jdbc:mysql://localhost:3306/mybatis?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai&useSSL=false&allowMultiQueries=true
 jdbc.username = root
 jdbc.password = root
